Added Back Button
Back button allows for functional backwards navigation from the quiz pane to the list preview pane and from the list preview pane to the menu pane.

--- a/main.css
+++ b/main.css
@@ -180,3 +180,12 @@ CSS starts here---------------------------------------------------------------
 .streak3 {
     grid-area: streak3;
 }
+
+.back {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    width: 5%;
+    height: 5%;
+    border: solid lightgrey 1px;
+}
