--- a/main.css
+++ b/main.css
@@ -85,9 +85,10 @@ CSS starts here---------------------------------------------------------------
 
 .listPreviewContainer {
     grid-template-columns: 6fr 2fr 20fr 2fr 2fr 52fr 6fr;
-    grid-template-rows: 2fr 92fr 4fr 2fr;
+    grid-template-rows: 2fr 6fr 86fr 4fr 2fr;
     grid-template-areas:
         ". . . . . . ."
+        ". sbT innerSB sbR . header ."
         ". sbT innerSb sbR . pane ."
         ". sbL innerSb sbB . toolbar ."
         ". . . . . . .";
@@ -122,9 +123,46 @@ CSS starts here---------------------------------------------------------------
     border: solid lightgrey 1px;
     grid-area: start;
 }
+.questionsHeader {
+    border: solid lightgrey 1px;
+    grid-area: header;
+}
 .questions {
     border: solid lightgrey 1px;
     grid-area: pane;
+    overflow-y: overlay;
+}
+.questionPreview, .questionsHeader {
+    display: flex;
+    height: 25px;
+    align-items: center;
+    border-bottom: solid black 1px;
+}
+.questionText {
+    width: 35%;
+    height: 100%;
+    border-right: solid black 1px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.arrow {
+    height: 100%;
+    width: 5%;
+    background-color: green;
+}
+.intervalDisplay {
+    height: 100%;
+    width: 15%;
+    border: solid lightgrey 1px;
+}
+.lock {
+    height: 100%;
+    width: 5%;
+    border: solid red 1px;
+}
+.isLocked {
+    background-color: red;
 }
 .toolbar {
     border: solid lightgrey 1px;
@@ -183,8 +221,8 @@ CSS starts here---------------------------------------------------------------
 
 .back {
     position: absolute;
-    top: 5%;
-    right: 5%;
+    top: 1%;
+    right: 1%;
     width: 5%;
     height: 5%;
     border: solid lightgrey 1px;
