--- a/main.css
+++ b/main.css
@@ -63,6 +63,7 @@ CSS starts here---------------------------------------------------------------
 .buttons {
     grid-area: header;
     border: solid black 1px;
+    display: flex;
 }
 .lists {
     grid-area: list;
@@ -191,6 +192,18 @@ CSS starts here---------------------------------------------------------------
 .toolbar {
     border: solid lightgrey 1px;
     grid-area: toolbar;
+    display: flex;
+    align-items: center;
+}
+.deleteList, .duplicateList, .newList, .renameList {
+    border-radius: 5px;
+    border: solid lightgreen 1px;
+    height: 80%;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 0 5px;
 }
 
 .quizContainer {
