--- a/main.css
+++ b/main.css
@@ -265,6 +265,17 @@ CSS starts here---------------------------------------------------------------
     border: solid lightgrey 1px;
 }
 
+.textFloater {
+    color: rgba(255, 62, 62, 0.5);
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 10%;
+    transition: all 1s ease;
+    font-size: 3em;
+    text-align: center;
+}
+
 .activeInput > input {
     width: 100%;
     height: 100%;
