--- a/main.css
+++ b/main.css
@@ -195,7 +195,7 @@ CSS starts here---------------------------------------------------------------
     display: flex;
     align-items: center;
 }
-.deleteList, .duplicateList, .newList, .renameList, .lockList {
+.deleteList, .duplicateList, .newList, .renameList, .lockList, .findDuplicates {
     border-radius: 5px;
     border: solid lightgreen 1px;
     height: 80%;
