Preview Sorted by Hard Questions
The question list preview now has the questions sorted by how many times the user answered them wrong since the question was last refreshed. This should allow the user to easily be able to use this information to set these questions to be studied more.

--- a/main.css
+++ b/main.css
@@ -158,8 +158,12 @@ CSS starts here---------------------------------------------------------------
     align-items: center;
     border-bottom: solid black 1px;
 }
+.wrongCounter {
+    width: 5%;
+    height: 100%
+}
 .questionText {
-    width: 35%;
+    width: 32.5%;
     height: 100%;
     border-right: solid black 1px;
     text-overflow: ellipsis;
