Fixed Preview Display
The headers on the preview display were out of alignment with the body of the display after the addition of the element which displays how many times the question has been answered wrong. This has been fixed.

--- a/main.css
+++ b/main.css
@@ -135,9 +135,12 @@ CSS starts here---------------------------------------------------------------
     align-items: center;
 }
 .setGerman, .setEnglish {
-    width: 35%;
+    width: 32.5%;
     border-right: solid black 1px;
     height: 100%;
+}
+.setGerman, .questionsHeader > :first-child {
+    width: 37.5% !important;
 }
 .setGerman > input, .setEnglish > input {
     width: 100%;
